--- a/public/stylesheets/loading.css
+++ b/public/stylesheets/loading.css
@@ -21,7 +21,7 @@ body {
 .loading-container {
     position: relative;
     width: 80vw;
-    max-width: 600px;
+    max-width: 700px;
     height: 300px;
     /* background-color: rgba(255, 255, 255, 0.8); */
     border-radius: 25px;
@@ -34,7 +34,7 @@ body {
     height: 100%;
     width: 0;
     /* background-color: #4caf50; */
-    animation: loading 5s infinite;
+    animation: loading 3s infinite;
 }
 
 .bird {
@@ -46,7 +46,7 @@ body {
     background-image: url('../images/eagle-removebg-preview.png');
     background-size: contain;
     background-repeat: no-repeat;
-    animation: fly 6s infinite;
+    animation: fly 3s linear forwards;
 }
 
 @keyframes loading {
